# particles-playground

./: CMakeLists.txt
apputils/: CMakeLists.txt
apputils/include/apputils/: AssetHolder.hpp  ColourUtils.hpp  InputHandler.hpp  MathsUtils.hpp  RNG.hpp  TextUtils.hpp
apputils/src/apputils/: AssetHolder.cpp  InputHandler.cpp  RNG.cpp
src/: App.cpp  App.hpp  ParticleSystem.cpp  ParticleSystem.hpp  main.cpp
